OBJ import and rendering crash #59404

Closed
opened 2018-12-15 08:00:58 +01:00 by Alaska · 5 comments
Member

System Information:
CPU: Ryzen 5 2600
RAM: 16GB
GPU: RX 570 4GB
OS: Windows 10 Home 64bit

Blender Version:
Broken: Blender 2.8 ba1f178c1c

Short description of error:
Importing the OBJ into Blender 2.8 results in the program crashing. In Blender 2.79 this isn't an issue.
Opening the 2.79 Blender file with the imported OBJ in 2.8 works , but rendering in Cycles just results in a crash.

Exact steps for others to reproduce the error:
Download the zip containing the OBJ causing the crashing then continue below.
#59404.zip

OBJ:

  1. Open Blender 2.8 and import "Crash.obj". Blender should crash (Sometimes it doesn't crash, but most of the time it will).
  2. Test the same thing in Blender 2.79 and Blender won't crash. (Save this 2.79 file for the next test)

Blend:

  1. Open the blend file saved in step 2 in Blender 2.8.
  2. It'll open like normal, but once you've entered a rendered Cycles viewport mode blender should crash. This does not occur in Blender 2.79.
**System Information:** CPU: Ryzen 5 2600 RAM: 16GB GPU: RX 570 4GB OS: Windows 10 Home 64bit **Blender Version:** Broken: Blender 2.8 ba1f178c1c8 **Short description of error:** Importing the OBJ into Blender 2.8 results in the program crashing. In Blender 2.79 this isn't an issue. Opening the 2.79 Blender file with the imported OBJ in 2.8 works , but rendering in Cycles just results in a crash. **Exact steps for others to reproduce the error:** Download the zip containing the OBJ causing the crashing then continue below. [#59404.zip](https://archive.blender.org/developer/F5958919/T59404.zip) OBJ: 1. Open Blender 2.8 and import "Crash.obj". Blender should crash (*Sometimes it doesn't crash, but most of the time it will*). 2. Test the same thing in Blender 2.79 and Blender won't crash. (*Save this 2.79 file for the next test*) Blend: 1. Open the blend file saved in step 2 in Blender 2.8. 2. It'll open like normal, but once you've entered a rendered Cycles viewport mode blender should crash. This does not occur in Blender 2.79.
Author
Member

Added subscriber: @Alaska

Added subscriber: @Alaska

This issue was referenced by ce3d00b9b7

This issue was referenced by ce3d00b9b788c29dbe6f95e6222b718d339629a5

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2018-12-17 14:29:27 +01:00

Broken edgehash code in recent refactor, which is breaking edges generation during mesh validation... tsst.

Broken edgehash code in recent refactor, which is breaking edges generation during mesh validation... tsst.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59404
No description provided.