Fix T59404: Mistake in recent EdgeHash refactor broke edge generations in mesh validate code.